[package]
name = "test_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
ethers = { version = "2.0.8", features = ["ws"] }
futures-timer = "3.0.2"
futures-util = "0.3.28"
hexlit = "0.5.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
